
    Corrected a bug in the processing of meta-calls when the called goal is
    an explicit message to an object where the receiver instead of the sender
    would be tested for events support.

    Corrected a static binding bug where meta-predicates called within other
    meta-predicates would not be correctly compiled. This bug prevented the
    "mtbatch" from running.

    Updated the library "types_loader.lgt" file to also load the heaps library
    files.

    Added an example, "delegates", illustrating an implementation of the
    delegation design pattern.

    Updated the "cc" example, correcting the declaration of the predicate
    shell/1 and adding an operating_system_type/1 predicate.

    Updated the "build_release.sh" script in order to calculate all the
    necessary checksums when building the MacOS X installer package.


2.41.1 - October 6, 2010

    Modified the compilation of objects that don't instantiate, specialize,
    or extend other objects in order to allow their use as roots of either
    class hierarchies or prototype hierarchies. This change simplifies the
    definition of class hierarchies when reflexive designs are not required.

    Added support for the blackboard built-in predicates (bb_put/2, bb_get/2,
    bb_delete/2, and bb_update/3) found on some Prolog compilers such as YAP
    and SICStus Prolog. Note that a Prolog compiler natively supporting these
    predicates is required. This support aims to facilitate porting of Prolog
    applications using the blackboard; these predicates should be avoided when
    writing portable Logtalk applications.

    Simplified the internal representation of entity prefixes and entity
    predicate functors. The new representation is also a bit more compact.

    Corrected a bug in the compilation of clauses for multifile predicates
    defined in the pseudo-object "user" where the execution context for the
    clause body goals would be undefined.
